--- a/project/index.html
+++ b/project/index.html
@@ -51,7 +51,7 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore-1.5.1.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone-1.0.0.min.js"></script>
 		<!-- JS -->
-		<script type="text/javascript" src="res/js.txsrc/utilites.js"></script>
+		<script type="text/javascript" src="res/js.txsrc/appx.utilites.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.screens.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.routes.js"></script>
