--- a/project/index.html
+++ b/project/index.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/ui.css">
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/txdebug.debugtools.css">
 		<!-- /CSS -->
-		<script type="text/javascript" src="res/js/Modernizr/modernizr-2.6.2.min.js"></script>
+		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if IE]> <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <![endif]-->
 		<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="iPhone@2x.png">
@@ -47,15 +47,15 @@
 		<div id="start" class="template"></div>
 		<!-- /Templates -->
 
-		<script type="text/javascript" src="res/js/jQuery/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="res/js/UnderscoreJS/underscore-1.5.1.min.js"></script>
-		<script type="text/javascript" src="res/js/BackboneJS/backbone-1.0.0.min.js"></script>
+		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
+		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
+		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- JS -->
 		<script type="text/javascript" src="res/js.txsrc/appx.utilites.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.screens.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/appx.routes.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/txdebug.debugtools.js"></script>
+		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
 		<!-- /JS -->
 	</body>
 
