--- a/project/index.html
+++ b/project/index.html
@@ -51,10 +51,10 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- JS -->
-		<script type="text/javascript" src="res/js.txsrc/appx.utilites.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/appx.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/appx.screens.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/appx.routes.js"></script>
+		<script type="text/javascript" src="res/js.txsrc/app.utilites.js"></script>
+		<script type="text/javascript" src="res/js.txsrc/app.js"></script>
+		<script type="text/javascript" src="res/js.txsrc/app.screens.js"></script>
+		<script type="text/javascript" src="res/js.txsrc/app.routes.js"></script>
 		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
 		<!-- /JS -->
 	</body>
