Massive Project Overhaul Added Grunt Builder, Changed Directories Structure

--- a/project/index.html
+++ b/project/index.html
@@ -17,13 +17,13 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta http-equiv="cleartype" content="on">
 		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
-		<!-- CSS -->
+		<!-- @tx-css -->
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/reset.css">
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/typographics.css">
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/layout.css">
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/ui.css">
 		<link rel="stylesheet" type="text/css" href="res/css.txsrc/txdebug.debugtools.css">
-		<!-- /CSS -->
+		<!-- /@tx-css -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if IE]> <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <![endif]-->
 		<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="iPhone@2x.png">
@@ -50,13 +50,13 @@
 		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
-		<!-- JS -->
+		<!-- @tx-js -->
 		<script type="text/javascript" src="res/js.txsrc/app.utilites.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/app.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/app.screens.js"></script>
 		<script type="text/javascript" src="res/js.txsrc/app.routes.js"></script>
 		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
-		<!-- /JS -->
+		<!-- /@tx-js -->
 	</body>
 
 </html>
