--- a/project/index.html
+++ b/project/index.html
@@ -18,11 +18,11 @@
 		<meta http-equiv="cleartype" content="on">
 		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<!-- @tx-css -->
-		<link rel="stylesheet" type="text/css" href="res/css.txsrc/reset.css">
-		<link rel="stylesheet" type="text/css" href="res/css.txsrc/typographics.css">
-		<link rel="stylesheet" type="text/css" href="res/css.txsrc/layout.css">
-		<link rel="stylesheet" type="text/css" href="res/css.txsrc/ui.css">
-		<link rel="stylesheet" type="text/css" href="res/css.txsrc/txdebug.debugtools.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/reset.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/typographics.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/layout.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/ui.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/tx.debugtools.css">
 		<!-- /@tx-css -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if IE]> <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <![endif]-->
@@ -51,11 +51,11 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- @tx-js -->
-		<script type="text/javascript" src="res/js.txsrc/app.utilites.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/app.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/app.screens.js"></script>
-		<script type="text/javascript" src="res/js.txsrc/app.routes.js"></script>
-		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.utilites.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.screens.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.routes.js"></script>
+		<script type="text/javascript" src="res/js/tx/tx.debugtools.js"></script>
 		<!-- /@tx-js -->
 	</body>
 
