--- a/project/index.html
+++ b/project/index.html
@@ -15,6 +15,7 @@
 		<meta name="MobileOptimized" content="320">
 		<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, minimum-scale=1">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="mobile-web-app-capable" content="yes">
 		<meta http-equiv="cleartype" content="on">
 		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<!-- @tx-css -->
@@ -22,7 +23,7 @@
 		<link rel="stylesheet" type="text/css" href="res/css.dev/typographics.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/layout.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/ui.css">
-		<link rel="stylesheet" type="text/css" href="res/css.dev/tx.debugtools.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/txdebug.debugtools.css">
 		<!-- /@tx-css -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if IE]> <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <![endif]-->
@@ -43,8 +44,9 @@
 	</head>
 
 	<body>
+		
 		<!-- Templates -->
-		<div id="start" class="template"></div>
+		<script type="text/template" id="start" class="template"></script>
 		<!-- /Templates -->
 
 		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
@@ -55,7 +57,7 @@
 		<script type="text/javascript" src="res/js.dev/app.js"></script>
 		<script type="text/javascript" src="res/js.dev/app.screens.js"></script>
 		<script type="text/javascript" src="res/js.dev/app.routes.js"></script>
-		<script type="text/javascript" src="res/js/tx/tx.debugtools.js"></script>
+		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
 		<!-- /@tx-js -->
 	</body>
 
