--- a/project/index.html
+++ b/project/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 
-<html class="no-js" lang="@LANGUAGEGOESHERE!">
+<html class="no-js" lang="@tx-language">
 
 	<head>
-		<title>@TITLEGOESHERE!</title>
+		<title>@tx-title</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="title" content="@TITLEGOESHERE!">
+		<meta name="title" content="@tx-title">
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name="copyright" content="All Rights Reserved.">
