--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,7 @@
 		<meta name="title" content="@tx-title">
 		<meta name="description" content="">
 		<meta name="author" content="">
+		<link type="text/plain" rel="author" href="/humans.txt">
 		<meta name="copyright" content="All Rights Reserved.">
 		<meta name="google-site-verification" content="">
 		<meta name="HandheldFriendly" content="True">
@@ -21,6 +22,7 @@
 		<!-- @tx-css -->
 		<link rel="stylesheet" type="text/css" href="res/css.dev/reset.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/typography.css">
+		<link rel="stylesheet" type="text/css" href="res/css.dev/utilities.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/layout.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/ui.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/txdebug.debugtools.css">
