Project Update and Minor Fixes

--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta http-equiv="cleartype" content="on">
-		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js" async></script>
+		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<!-- @tx-css -->
 		<link rel="stylesheet" type="text/css" href="res/css.dev/reset.css">
 		<link rel="stylesheet" type="text/css" href="res/css.dev/utilities.css">
@@ -55,15 +55,15 @@
 		<script type="text/template" id="start" class="template"></script>
 		<!-- /Templates -->
 
-		<script type="text/javascript" src="res/js/jQuery/jquery.min.js" defer></script>
-		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js" defer></script>
-		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js" defer></script>
+		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
+		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
+		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- @tx-js -->
-		<script type="text/javascript" src="res/js.dev/app.utilites.js" defer></script>
-		<script type="text/javascript" src="res/js.dev/app.js" defer></script>
-		<script type="text/javascript" src="res/js.dev/app.screens.js" defer></script>
-		<script type="text/javascript" src="res/js.dev/app.routes.js" defer></script>
-		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js" defer></script>
+		<script type="text/javascript" src="res/js.dev/app.utilites.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.screens.js"></script>
+		<script type="text/javascript" src="res/js.dev/app.routes.js"></script>
+		<script type="text/javascript" src="res/js/txdebug/txdebug.debugtools.js"></script>
 		<!-- /@tx-js -->
 	</body>
 
