--- a/dev/app.html
+++ b/dev/app.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+
+<html class="no-js" lang="@tx-language">
+
 	<head>
 		<title>@tx-title</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -24,6 +28,7 @@
 		<link rel="stylesheet" type="text/css" href="res/css-dev/tx/tx-debug.css">
 		<!-- /@tx-css -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<!--[if IE]> <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <![endif]-->
 		<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="apple-touch-icon-114x114.png">
 		<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="apple-touch-icon-120x120.png">
 		<link rel="apple-touch-icon" type="image/png" sizes="72x72" href="apple-touch-icon-72x72.png">
@@ -43,3 +48,19 @@
 		<link rel="icon" type="image/png" href="googleTV.png">
 		<link rel="image_src" href="socialImage.jpg">
 	</head>
+
+	<body>
+		<script type="text/template" id="start" class="template"></script>
+		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
+		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
+		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
+		<!-- @tx-js -->
+		<script type="text/javascript" src="res/js-dev/app.utilites.js"></script>
+		<script type="text/javascript" src="res/js-dev/app.js"></script>
+		<script type="text/javascript" src="res/js-dev/app.screens.js"></script>
+		<script type="text/javascript" src="res/js-dev/app.routes.js"></script>
+		<script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
+		<!-- /@tx-js -->
+	</body>
+
+</html>
