--- a/dev/app.html
+++ b/dev/app.html
@@ -55,6 +55,7 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- @tx-js -->
+		<script type="text/javascript" src="res/js-dev/rAF.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.screens.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.routes.js"></script>
