Major Project Overhaul

--- a/dev/critical.html
+++ b/dev/critical.html
@@ -49,16 +49,6 @@
     <link rel="image_src" href="thumbnail.jpg">
   </head>
 
-  <body>
-    <!-- @tx-critical -->
-    <script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
-    <script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
-    <script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
-    <script type="text/javascript" src="res/js/FontFaceObserver/fontfaceobserver.min.js"></script>
-    <!-- @tx-js -->
-    <script type="text/javascript" src="res/js-dev/rAF.min.js"></script>
-    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
-    <!-- /@tx-js -->
-  </body>
+  <body></body>
 
 </html>
