--- a/dev/app.html
+++ b/dev/app.html
@@ -50,6 +50,7 @@
   </head>
 
   <body>
+    <h1>AppX</h1>
     <script type="text/template" id="start" class="template"></script>
     <!-- @tx-critical -->
     <script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
