--- a/dev/index.html
+++ b/dev/index.html
@@ -50,6 +50,7 @@
   </head>
 
   <body>
+    <h1>AppX</h1>
     <!-- @tx-critical -->
     <script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
     <script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
