--- a/dev/app.html
+++ b/dev/app.html
@@ -7,6 +7,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="title" content="@tx-title">
+    <link rel="manifest" href="/manifest.json">
     <link type="text/plain" rel="author" href="/humans.txt">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
