--- a/dev/app.html
+++ b/dev/app.html
@@ -43,7 +43,7 @@
   </head>
 
   <body>
-    <h1>AppX</h1>
+    <div id="app"></div>
     <script type="text/template" id="start" class="template"></script>
     <script type="text/javascript" src="res/js/appx.js" defer></script>
     <script type="text/javascript" src="res/js-dev/tx/tx-debug.js" defer></script>
